fiz uns trem ai

--- a/central.html
+++ b/central.html
@@ -31,6 +31,7 @@
 * checkbox para marcar o filme como destaque. -->
 <footer>
     Rodapé da página
+    <img src="img/Instagram_icon.png.webp" class="insta">
 </footer>
 </body>
 </html>
