alteramos uns bglh

--- a/catalogo.html
+++ b/catalogo.html
@@ -20,22 +20,49 @@
           <a href='/central.html'>Contato</a>
         </nav>
       </header>
-    <center> 
+<div class="filme"> 
+  <img src="img/21029996_20130821205722213.jpg" class="filmes"> 
+  <input type="submit" id="btImg" name="btImg">
+</div>
+<div class="filme">
+
+
+    <img src="img/p172787_v_v8_aw.jpg" class="filmes">
+    <input type="submit" id="btImg" name="btImg">
+  </div>
+    <div class="filme">
     <img src="img/adao.png" class="filmes">
+    <input type="submit" id="btImg" name="btImg">
+  </div>
+    <div class="filme">
     <img src="img/petroleo.png" class="filmes">
+    <input type="submit" id="btImg" name="btImg">
+  </div>
+    <div class="filme">
     <img src="img/panda.png" class="filmes">
-    
+    <input type="submit" id="btImg" name="btImg">
+  
+  </div>
+  <div class="filme">
     <img src="img/karate.png" class="filmes">
+    <input type="submit" id="btImg" name="btImg">
+  </div>
+    <div class="filme">
     <img src="img/clube.png" class="filmes">
+    <input type="submit" id="btImg" name="btImg">
+</div>
+    <div class="filme">
     <img src="img/avatar.png" class="filmes">
-   
+    <input type="submit" id="btImg" name="btImg">
+  </div>
+    <div class="filme">
     <img src="img/arranhaceu.png" class="filmes">
-</center>
+    <input type="submit" id="btImg" name="btImg">
+
 <footer>
-    Rodapé da página
-    <img src="img/Instagram_icon.png.webp" class="insta">
-    <input type="button" value="Salvar" class="salvar">
-    <input type="button" value="Cancelar" class="Cancelar">
+  Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
+  
+   
 </footer>
 </body>
 </html>
