--- a/central.html
+++ b/central.html
@@ -15,9 +15,9 @@
           <button>Enviar</button>
         </form>
         <nav>
-            <a href='/catalogo.html'>Home</a>
-            <a href='/empregos.html'>Sobre</a>
-            <a href='/central.html'>Contato</a>
+            <a href='/catalogo.html'>Catalogo</a>
+            <a href='/empregos.html'>Empregos</a>
+            <a href='/central.html'>Cadastrar</a>
         </nav>
       </header>
 
@@ -97,10 +97,11 @@
 * indicação etária
 * checkbox para marcar o filme como destaque. -->
 <footer>
-    Rodapé da página
-    <img src="img/Instagram_icon.png.webp" class="insta">
+    Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
+   <center>
     <input type="button" value="Salvar" class="salvar">
     <input type="button" value="Cancelar" class="Cancelar">
+</center>
 </footer>
 </body>
 </html>
