--- a/empregos.html
+++ b/empregos.html
@@ -15,9 +15,9 @@
       <button>Enviar</button>
     </form>
     <nav>
-      <a href='/catalogo.html'>Home</a>
-      <a href='/empregos.html'>Sobre</a>
-      <a href='/central.html'>Contato</a>
+      <a href='/catalogo.html'>Catalogo</a>
+      <a href='/empregos.html'>Emprego</a>
+      <a href='/central.html'>Cadastrar</a>
     </nav>
   </header>
 
