--- a/catalogo.html
+++ b/catalogo.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header> 
-        <h1>FilmeFlix</h1>
+        <h1>JKFlix</h1>
         <form>
           <input placeholder='Pesquisar'/>
           <button>Enviar</button>
