--- a/empregos.html
+++ b/empregos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header> 
-    <h1>FilmeFlix</h1>
+    <h1>JKFlix</h1>
     <form>
       <input placeholder='Pesquisar'/>
       <button>Enviar</button>
@@ -20,6 +20,11 @@
       <a href='/central.html'>Cadastrar</a>
     </nav>
   </header>
+
+  <br>  <br> 
+<center> 
+  <input class="bot" type="text" value="Procurar por uma palavra chave">
+</center>
 
 
     
