--- a/reportbug.html
+++ b/reportbug.html
@@ -11,7 +11,7 @@
 
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="css/estilo.css">
+<link rel="stylesheet" href="css/teste.css">
 
 <title>Document</title>
 
@@ -20,7 +20,7 @@
 <body> 
  <header>
 
- <h1>FilmeFlix</h1>
+ <h1>JKFlix</h1>
 
  <form>
 
@@ -44,29 +44,53 @@
 
 
 
-<h1 class="dnv">Contatar o atendimento ao cliente</h1>
-
-<div class="direita"></div>
-
-
-
-<h3> Ligue para nós usando o aplicativo FilmeFlix
- Entrar em contato com a FilmeFlix ficou mais fácil do que
- nunca. Agora é só usar o aplicativo Film Flix no seu celular
- ou tablet Android ou iOS! Ligar pelo aplicativo é grátis! Você
- só precisa de uma conexão fixa ou móvel com a Internet.</h3>
-
- <h1 class="dnv">Baixe o App</h1>
-
-<input class="GG" type="button" value="Ligue de qualquer telefone">
- <br><br>
- <input class="GG" type="button" value="Iniciar um bate papo">
+<div class="esquerda">
+    <br><br>
+    <div class="fonte01">
+        <h1>Contratar o atendimento ao Cliente</h1>
+        <p>Ligue Para nós usando o aplicativo SigmaFlix</p>
+        <p>Entrar em contato com a JKFlix ficou mais fácil do que</p>
+        <p>Nunca. Agora é só usar o aplicativo JKFlix no seu celular</p>
+        <p>ou tablet Android iOS! Ligar pelo aplicativo é grátis! Você</p>
+        <p>só precisa de uma conexão fixa ou móvel com Internet.</p>
 
 
- <input class="CV" type="text" value="Informe um link">
 
- <input class="CV" type="text" value="Relate o problema">
- 
+       <h1>Baixe o aplicativo</h1>
+        <img src="img/2333410-android-os-smartphone_85588.png" alt="">
+        <img src="img/social_apple_macbook_iphone_icon_131212.png" alt="" class="ios">
+    </div>
+    <br><br><br>
+    <div class="hokage">
+        <a href="">Ligue de qualquer telefone</a>
+    </div>
+    <br><br>
+    <div class="hokage2">
+        <a href="">Iniciar um bate-papo</a>
+    </div>
+    <br><br>
+    <br> <br> <br>
+</div>
+
+
+
+<div class="direita">
+    <div class="textfield">
+        <input type="text" name="usuario" placeholder="Informe um link">
+    </div>
+    <div class="escreva">
+        <label for="texto" width="">Escreva aqui:</label>
+        <br>
+        <textarea name="texto" cols="64" rows="10"></textarea>
+    </div>
+    <br>
+    <div class="arquivos">
+        <label for="texto" width=""><h3>Adicionar arquivos:</h3></label>
+         <a href=""><img src="img/Captura de tela 2022-12-07 154412.png" alt="" width="490px" ></a>
+    </div>
+    
+       <a href=""> <input type="submit" value="Enviar" name="Enviar" class="enviar" ></a>
+</div>
 
 
 
