--- a/raloim.html
+++ b/raloim.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>FilmeFlix</h1>
+        <h1>JKFlix</h1>
         <form>
             <input placeholder='Pesquisar' />
             <button>Enviar</button>
