--- a/monstrinhocomtomcruise.html
+++ b/monstrinhocomtomcruise.html
@@ -41,6 +41,8 @@
     
         <footer>
             Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
+            <br>
+            <a href='reportbug.html'>Reportar bug</a>
         </footer>
     
 </body>
