--- a/avatar.html
+++ b/avatar.html
@@ -51,6 +51,8 @@
     
         <footer>
             Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
+            <br>
+            <a href='reportbug.html'>Reportar bug</a>
         </footer>
     
 </body>
