--- a/catalogo.html
+++ b/catalogo.html
@@ -18,6 +18,8 @@
           <a href='/catalogo.html'>Catalogo</a>
           <a href='/empregos.html'>Emprego</a>
           <a href='/central.html'>Cadastrar</a>
+         
+        
         </nav>
       </header>
 
@@ -58,7 +60,8 @@
 
 <footer>
   Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
-  
+  <br>
+  <a href='reportbug.html'>Reportar bug</a>
    
 </footer>
 </body>
