--- a/central.html
+++ b/central.html
@@ -91,9 +91,12 @@
 
 <footer>
     Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
+    
    <center>
     <input type="button" value="Salvar" class="salvar">
     <input type="button" value="Cancelar" class="Cancelar">
+    <br>
+    <a href='reportbug.html'>Reportar bug</a>
 </center>
 </footer>
 </body>
