--- a/reportbug.html
+++ b/reportbug.html
@@ -98,6 +98,8 @@
  <footer>
 
  Desenvolvido por Vitor Meyer, Eduardo Alcala e Samurai
+ <br>
+ <a href='reportbug.html'>Reportar bug</a>
 
  </footer>
 
